src/styles/dashboard.css
/* ... */
#mobilepop .panelCloseBtn:hover {
    background-color: rgba(255, 255, 255, 0.2);
    transform: scale(1.05);
}

@media screen and (max-width: 600px) {
    #mobilepop{
        display: flex;
        z-index: 100;
        width: 280px;
        max-width: 80vw;
        height: 100vh;
        position: fixed;
        top: 0;
        left: 0;
        background-color: var(--dark-clr2);
        box-shadow: 2px 0 20px rgba(0, 0, 0, 0.3);
        border-radius: 0 12px 12px 0;
    }

    .menuBtn#floatingButton{
        display: flex;
    }

    .mainprofileSect .leftProfile {
        display: none;
    }

    .mainprofileSect {
        padding: 0;
    }

    .panelPrfileDisp .right h3{
        font-size: 1.01em;
    }
    .panelPrfileDisp .right p{
        font-size: 0.79em;
    }

    .centerRightProfile ul li span{
        font-size: 0.95em;
    }

    .topmostRightProfile{
        grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
        height: max-content;
    }

    .unitUserEarningDisplay{
        padding: 15px;
        background-color: var(--profile-bg);
        border-radius: 10px;
        height: max-content;
        max-height: 80px;
    }

    .rightProfile{
        width: 100%;
        padding-inline: 3%;
        padding-top: calc(3% + 30px);
    }

    .lengthyAnalytics{
        aspect-ratio: 9/10;
    }

    .gridAnalytics{
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: flex-start;
    }
    
    .leftGridAnalaytics{
        aspect-ratio: 9/10;
        width: 100%;
    }
    .rightGridAnalaytics{
        width: 100%;
        aspect-ratio: 9/14;
    }

    .profilefooter{
        margin-bottom: 2em;
    }

    .avatarSection.investwidgetSection{
        padding-inline: 30px;
        width: calc(100vw - 30px);
    }
}

